correted tests